--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@types/hash-sum": "^1.0.0",
+    "@types/jump.js": "^1.0.4",
     "@vitejs/plugin-vue": "^1.9.0",
     "sass": "^1.53.0",
     "vite": "^2.0.5",
