--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lrnsomething/vue3-super-tour",
+  "name": "vue3-super-tour",
   "version": "0.4.1",
   "scripts": {
     "check": "vue-tsc --noEmit",
