--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jump.js": "^1.0.4",
     "@vitejs/plugin-vue": "^1.9.0",
     "sass": "^1.53.0",
+    "typescript": "^4.7.4",
     "vite": "^2.0.5",
     "vue-tsc": "~0.38.5"
   },
