--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/hash-sum": "^1.0.0",
     "@types/jump.js": "^1.0.4",
+    "@types/node": "^16.11.7",
     "@vitejs/plugin-vue": "^3.0.1",
     "sass": "^1.53.0",
     "typescript": "^4.7.4",
