--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass": "^1.53.0",
     "typescript": "^4.7.4",
     "vite": "^3.0.8",
+    "vite-plugin-vue-type-imports": "^0.2.0",
     "vue-tsc": "~0.38.5"
   },
   "files": [
