--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@types/jump.js": "^1.0.4",
     "@types/node": "^16.11.7",
     "@vitejs/plugin-vue": "^3.0.1",
-    "sass": "^1.53.0",
+    "sass": "^1.54.4",
     "typescript": "^4.7.4",
     "vite": "^3.0.8",
     "vite-plugin-vue-type-imports": "^0.2.0",
-    "vue-tsc": "~0.38.5"
+    "vue-tsc": "^0.40.1"
   },
   "files": [
     "dist",
